# niri-dock

./: Cargo.toml  LICENSE  justfile
.github/workflows/: build-release.yml  ci.yml
qml/: DockUI.qml
src/: fractional_scale.rs  ipc.rs  lib.rs  main.rs  state.rs  ui.rs  wayland.rs
